--- a/partie1/index.html
+++ b/partie1/index.html
@@ -3,9 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Js-Web-Part1</title>
   </head>
   <body>
+    <h1>Javascript dans le web</h1>
+    <div>
+      <button class="btn">😁Click me 😎</button>
+    </div>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, iure
+      nam! Tempore nihil corrupti eligendi necessitatibus rem modi error qui!
+    </p>
+    <p id="topic">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatum
+      iusto voluptas ipsam dolorum, dicta quis in reiciendis voluptatibus
+      quaerat, unde enim mollitia laborum quisquam.
+    </p>
+    <section class="love">
+      <ul>
+        <li>AGOE</li>
+        <li>li2</li>
+        <li>li3</li>
+      </ul>
+    </section>
+    <section class="love">
+      <p>Lorem ipsum dolor sit amet.</p>
+    </section>
     <script src="./index.js"></script>
   </body>
 </html>
