buil my own bank app

--- a/bank/index.html
+++ b/bank/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Mini bank</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <header>FAMOUS BANK</header>
+      <section class="container">
+        <section class="register">
+          <button>Register new User</button>
+        </section>
+        <section class="memberList"></section>
+      </section>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
